--- a/.eslintrc
+++ b/.eslintrc
@@ -196,6 +196,7 @@
 
     "no-var": 1,          // require let or const instead of var (off by default)
     "generator-star": 0,  // enforce the position of the * in generator functions (off by default)
+    "no-unused-labels": 1
 
 
     ////////// Legacy //////////
