--- a/.eslintrc
+++ b/.eslintrc
@@ -97,6 +97,7 @@
     "no-new-wrappers": 0,       // disallows creating new instances of String, Number, and Boolean
     "no-octal": 0,              // disallow use of octal literals
     "no-octal-escape": 0,       // disallow use of octal escape sequences in string literals, such as var foo = "Copyright \251";
+    "no-param-reassign": 1,
     "no-process-env": 0,        // disallow use of process.env (off by default)
     "no-proto": 0,              // disallow usage of __proto__ property
     "no-redeclare": 2,          // disallow declaring the same variable more then once
