--- a/.eslintrc
+++ b/.eslintrc
@@ -171,7 +171,7 @@
     "semi-spacing": 2,      // disallow space before semicolon
     "no-spaced-func": 0,            // disallow space between function identifier and application
     "no-ternary": 0,                // disallow the use of ternary operators (off by default)
-    "no-unneeded-ternary: 1,
+    "no-unneeded-ternary": 1,
     "no-trailing-spaces": 0,        // disallow trailing whitespace at the end of lines
     "no-underscore-dangle": 0,      // disallow dangling underscores in identifiers
     "no-wrap-func": 0,              // disallow wrapping of non-IIFE statements in parens
