--- a/.eslintrc
+++ b/.eslintrc
@@ -134,7 +134,7 @@
     "no-undef-init": 0,               // disallow use of undefined when initializing variables
     "no-undefined": 0,                // disallow use of undefined variable (off by default)
     "no-unused-vars": [1, { "args": "none" }], // disallow declaration of variables that are not used in the code
-    "no-use-before-define": 2,        // disallow use of variables before they are defined
+    "no-use-before-define": [2, {"functions": false}],        // disallow use of variables before they are defined
 
 
     ////////// Node.js //////////
