--- a/.eslintrc
+++ b/.eslintrc
@@ -215,6 +215,6 @@
     
     ///////// React //////////
     "react/react-in-jsx-scope": 2,
-    "react/prop-types: [1, { "ignore": "length" }]
+    "react/prop-types: [1, { "ignore": ["length"] }]
   }
 }
