--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,7 @@
   "rules": {
     ////////// Possible Errors //////////
 
-    "comma-dangle": 0,         // disallow trailing commas in object literals
+    "comma-dangle": [1, "always-multiline"],         // disallow trailing commas in object literals
     "no-cond-assign": 2,          // disallow assignment in conditional expressions
     "no-console": 1,              // disallow use of console (off by default in the node environment)
     "no-constant-condition": 0,   // disallow use of constant expressions in conditions
