--- a/.eslintrc
+++ b/.eslintrc
@@ -218,6 +218,6 @@
     "react/prop-types: [1, { "ignore": ["length"], "skipUndeclared": true }],
     
     ///////// Vue //////////
-    "vue/require-valid-default-prop: 2
+    "vue/require-valid-default-prop": 2
   }
 }
