--- a/.eslintrc
+++ b/.eslintrc
@@ -173,7 +173,7 @@
     "no-spaced-func": 0,            // disallow space between function identifier and application
     "no-ternary": 0,                // disallow the use of ternary operators (off by default)
     "no-unneeded-ternary": 1,
-    "no-trailing-spaces": 1,        // disallow trailing whitespace at the end of lines
+    "no-trailing-spaces": 1,        // disallow trailing whitespace at the end of lines (allowing trailing spaces will trigger changes in Git)
     "no-underscore-dangle": 0,      // disallow dangling underscores in identifiers
     "no-wrap-func": 0,              // disallow wrapping of non-IIFE statements in parens
     "one-var": 0,                   // allow just one var statement per function (off by default)
