--- a/.eslintrc
+++ b/.eslintrc
@@ -198,7 +198,7 @@
     "padding-line-between-statements": [
       1,
       { blankLine: "always", prev: "*", next: "return" }
-    ]
+    ],
 
 
     ////////// ECMAScript 6 //////////
@@ -220,6 +220,7 @@
     ///////// React //////////
     "react/react-in-jsx-scope": 2,
     "react/prop-types: [1, { "ignore": ["length"], "skipUndeclared": true }],
+    "react/jsx-sort-props": 1,
     
     ///////// Vue //////////
     "vue/require-valid-default-prop": 2,
