--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,7 @@ bind H resize-pane -L 5
 bind L resize-pane -R 5
 
 set-window-option -g mode-keys vi
+
+# give tmux 256 color support
+set-option -g default-terminal        'screen-256color'                                                                                                                                     | 20 call plug#begin()$
+set-option -g terminal-overrides      ',xterm-256color:RGB'
