--- a/.eslintrc
+++ b/.eslintrc
@@ -150,6 +150,7 @@
 
     ////////// Stylistic Issues //////////
 
+    "arrow-parens": 0,
     "brace-style": 0,               // enforce one true brace style (off by default)
     "camelcase": 0,                 // require camel case names
     "comma-spacing": 0,             // enforce spacing before and after comma
@@ -158,6 +159,9 @@
     "eol-last": 0,                  // enforce newline at the end of file, with no multiple empty lines
     "func-names": 0,                // require function expressions to have a name (off by default)
     "func-style": 0,                // enforces use of function declarations or expressions (off by default)
+    "function-paren-newline: 0,
+    "implicit-arrow-linebreak: 0,
+    "import/extensions": 0,
     "key-spacing": 0,               // enforces spacing between keys and values in object literal properties
     "max-nested-callbacks": 0,      // specify the maximum depth callbacks can be nested (off by default)
     "new-cap": 0,                   // require a capital letter for constructors
@@ -226,6 +230,9 @@
     
     ///////// Vue //////////
     "vue/require-valid-default-prop": 2,
-    "vue-scoped-css/require-scoped": 2
+    "vue-scoped-css/require-scoped": 2,
+
+    ////////// Typescript ////////
+    "@typescript-eslint/no-var-requires: 0
   }
 }
